<resources>
    <string name="app_name">iBuy</string>
    <string name="list">Shopping<!-- Strings related to login --> List</string>
    <string name="users">Users</string>
    <string name="common">Common Items</string>
    <string name="add_remove_users">Add/Remove Users</string>

    <string name="user_login">Login</string>
    <string name="user_logout">Logout</string>
    <string name="add_users">Create New User</string>
    <string name="add_route">Add to Route</string>
    <string name="add_to_list">Add to Shopping List</string>
    <string name="alert_off">No New Alerts</string>
    <string name="alert_on">New Alert</string>
    <string name="select_user">Select User</string>

    <string name="item_name">Item Name</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_cost">Cost</string>
    <string name="due">Set due date</string>

    <!-- Strings related to category -->
    <string name="category">Category</string>
    <string name="category1">Food</string>
    <string name="category2">Bathroom</string>
    <string name="category3">Household</string>
    <string name="category4">Clothing</string>

    <!-- Strings related to location -->
    <string name="location1">Farmers Market</string>
    <string name="location2">Frys</string>
    <string name="location3">Sprouts</string>
    <string name="location4">Natural Grocers</string>
    <string name="location5">Whole Foods</string>
    <string name="location6">Bashas</string>
    <string name="location7">Albertsons</string>
    <string name="location8">Kohl\'s</string>
    <string name="location9">Dillard\'s</string>
    <string name="location10">JC Penny</string>
    <string name="location11">Walmart</string>
    <string name="location12">Target</string>
    <string name="location13">Safeway</string>
    <string name="location14">Macy\'s</string>
    <string name="location15">Best Buy</string>
    <string name="location16">Sears</string>
    <string name="location17">Costco</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_username">Enter Your Username</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_username_exists">Username Already Exists; try again!</string>

</resources>
