<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.urch.chatwin.ibuy.MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>


    <Button
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:text="@string/list"
        android:id="@+id/list"
        android:background="#EEEEEE"
        android:onClick="showList"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:text="@string/common"
        android:id="@+id/common"
        android:background="#EEEEEE"
        android:layout_below="@+id/list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>


    <Button
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:text="@string/users"
        android:id="@+id/users"
        android:background="#EEEEEE"
        android:layout_below="@+id/common"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>


</RelativeLayout>

