<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:tileMode="repeat"
    tools:context="com.urch.chatwin.ibuy.userInfo">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:textSize="50sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ibuy"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/alert_off"
        android:id="@+id/alert"
        android:background="@drawable/mybutton"

        android:layout_marginTop="56dp"
        android:layout_below="@+id/title"
        android:layout_alignStart="@+id/add_to_list" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="Shopping List"
        android:id="@+id/add_to_list"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/alert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="showList" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/common"
        android:id="@+id/view_common"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/add_to_list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="viewCommon" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/add_route"
        android:id="@+id/add_route"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/view_common"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/user_logout"
        android:id="@+id/user_logout"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/add_route"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="logOut" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="Create Alert"
        android:id="@+id/create_alert"
        android:background="@drawable/mybutton"

        android:layout_alignTop="@+id/alert"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="Add Item"
        android:id="@+id/button"
        android:background="@drawable/mybutton"
        android:onClick="addItem"
        android:layout_alignTop="@+id/create_alert"
        android:layout_alignEnd="@+id/add_to_list" />


</RelativeLayout>