<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:tileMode="repeat"
    tools:context="com.urch.chatwin.ibuy.MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/user_login"
        android:id="@+id/user_login"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="userLoginP (MainMenu)" />


    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/add_users"
        android:id="@+id/add_remove_users"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/user_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="createNewUser (MainMenu)" />


</RelativeLayout>

